# fray

./: .env.example  .gitignore  AGENTS.md  README.md  fray-scope.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: chat-quality-gates.yml  release-tauri-updater.yml  secrets-scan.yml
docs/: bundle-summary-pr7.md  desktop-updates.md  discord-familiar-overhaul-architecture.md  discord-roles-permissions-deep-dive.md  follow-up-tickets.md  hosting-requirements.md  issue1-createLegacy-split-plan.md  matrix-synapse-parity-roadmap.md  phase6-rollout-checklist.md  security-commit-cadence.md  vps-matrix-runbook.md
docs/adr/: 0001-minimal-client-boundary.md
metrics/: test-environment-events.json  weekly-report.md
scripts/: check-bundle-budgets.mjs  generate-metrics-report.mjs  scan-secrets.sh
src/: App.tsx  index.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/app/: AppShell.tsx  routes.tsx  useAppKeyboardShortcuts.ts  useNotificationEffects.ts  useSearchNavigation.ts
src/components/: AuthScreen.tsx  CallDock.tsx  ChannelList.tsx  CommandPalette.tsx  MemberList.tsx  MessageComposer.tsx  MessageList.tsx  NotificationTray.tsx  OnboardingOverlay.tsx  PinnedPanel.tsx  RoomHeader.tsx  ServerRail.tsx  ServerSettingsModal.tsx  ThreadPanel.tsx  UnreadFeed.tsx  UserSettingsModal.tsx
src/config/: featureFlags.ts
src/data/: mock.ts
src/hooks/: useMediaPreview.ts
src/matrix/: client.ts  permissions.ts  rooms.ts  (+2 more)
tasks/: lessons.md  todo.md
(+58 files in other folders)
