[package]
name = "fray"
version = "0.1.0"
description = "Fray Matrix client"
authors = ["NYTEMODE"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/NYTEMODEONLY/fray"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.48.0", features = ["time"] }
urlencoding = "2.1.3"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
